Fix spacing and change colors using styles.css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,47 +4,45 @@
   font-size: 20px ;
   font-weight: bold;
   text-align: center;
-  color: rgb(238, 20, 38);
 }
 body {
-  background-color: rgb(150, 193, 236);
+  background-color: rgb(239, 244, 183);
 }
 h1 {
   color:blue;
   text-align: center;
-  font-size: 35px;
-  margin-top: 2%;
+  font-size: 40px;
+  margin-top: 3%;
 }
 img {
-  margin-top: 1%;
+  margin: auto;
   width: 150px;
-  border: 2px solid rgb(238, 20, 38);
-  border-width: 5px;
+  border: 4px solid rgb(238, 20, 38);
 }
 #neighbor {
   background-color: rgb(38, 222, 72);
-  margin-left: 20%;
+  margin: auto;
   margin-top: 3%;
-  height:50%;
-  width: 60%;
+  width: 70%;
   border: solid rgb(238, 20, 38) 8px;
-  padding: 25px; 
+  padding: 30px; 
   text-align: center;
 }
 .form {
   font-size:25px ;
   font-weight: bold;
-  color:blue;
+  color:rgb(238, 20, 38);
 }
 #num {
-  font-size: 15px ;
+  font-size: 20px ;
   width: 85%;
   background-color:rgb(209, 244, 16) ; 
   border: solid blue 3px;
   text-align: center;
+  font-weight: bold;
 }
-placeholder {
-  color:blue;  
+#newSong {
+  color:red;  
 }
 #button {
   font-size: 15px ;
